# iotronic-lightning-rod

./: .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  plugins.example.json  requirements.txt  settings.example.json  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/installation/: arduino_yun.rst  raspberry_pi_3.rst  ubuntu1604.rst
doc/installation/docker/: arm_docker.md  rpi_docker.md  x86_64_docker.md
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/init.d/: lightning-rod
etc/iotronic/: iotronic.conf
etc/systemd/system/: s4t-lightning-rod.service
iotronic_lightningrod/: Board.py  config.py  lightningrod.py  wampmessage.py
iotronic_lightningrod/common/: exception.py  utils.py
iotronic_lightningrod/devices/: Device.py  raspberry.py  server.py  yun.py
iotronic_lightningrod/devices/gpio/: Gpio.py  raspberry.py  server.py  yun.py
iotronic_lightningrod/modules/: Module.py  device_manager.py  network_manager.py  plugin_manager.py  rest_manager.py  service_manager.py  test.py  utils.py  vfs_library.py  vfs_manager.py  webservice_manager.py
iotronic_lightningrod/modules/plugins/: PluginSerializer.py
iotronic_lightningrod/modules/plugins/plugins_examples/arduino_yun/: demo.py
iotronic_lightningrod/modules/plugins/plugins_examples/generics/: echo.py  runner.json  runner.py
iotronic_lightningrod/modules/proxies/: Proxy.py  nginx.py
iotronic_lightningrod/modules/proxies/configs/: iotronic
iotronic_lightningrod/modules/web/templates/: base.html  config.html  home.html  login.html  network.html  status.html  system.html
iotronic_lightningrod/plugins/: Plugin.py  PluginSerializer.py  pluginApis.py
iotronic_lightningrod/plugins/plugins_examples/: demo.py  runner.py  smartme.json  smartme.py
iotronic_lightningrod/plugins/plugins_examples/arduino_yun/: led.json  led.py
iotronic_lightningrod/plugins/plugins_examples/generics/: echo.json  echo.py  runner.py  zero.py
iotronic_lightningrod/proxies/: nginx.py
iotronic_lightningrod/proxies/configs/: default
opt/stack4things/: plugins.example.json
scripts/: configure_lr.py  device_bkp_rest  install_lr.py  lr_configure  lr_install
templates/: plugins.example.json  services.example.json  settings.example.json
utils/docker/arm/: Dockerfile
utils/docker/arm/data/: lr_configure  lr_install  startLR
utils/docker/x86_64/: Dockerfile
utils/docker/x86_64/data/: lr_install
(+2 files in other folders)
