[metadata]
name = iotronic_lightningrod
summary = Implementation of the Lightning-rod, the Stack4Things board-side probe
description-file =
    README.rst
author = Nicola Peditto, Fabio Verboso
author-email = n.peditto@gmail.com
home-page = http://stack4things.unime.it/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    iotronic_lightningrod
data-files =
    bin/ = scripts/*
    /iotronic_lightningrod/templates = templates/*
    /iotronic_lightningrod/etc/iotronic = etc/iotronic/iotronic.conf
    /iotronic_lightningrod/etc/logrotate.d = etc/logrotate.d/lightning-rod.log
    /iotronic_lightningrod/etc/systemd/system = etc/systemd/system/s4t-lightning-rod.service


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = iotronic_lightningrod/locale
domain = iotronic_lightningrod

[update_catalog]
domain = iotronic_lightningrod
output_dir = iotronic_lightningrod/locale
input_file = iotronic_lightningrod/locale/iotronic_lightningrod.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = iotronic_lightningrod/locale/iotronic_lightningrod.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[entry_points]
console_scripts =
   lightning-rod = iotronic_lightningrod.lightningrod:main

s4t.modules =
   utility = iotronic_lightningrod.modules.utils:Utility
   plugin = iotronic_lightningrod.modules.plugin_manager:PluginManager
   device = iotronic_lightningrod.modules.device_manager:DeviceManager
   service = iotronic_lightningrod.modules.service_manager:ServiceManager
   # network = iotronic_lightningrod.modules.network_manager:NetworkManager
   webservice = iotronic_lightningrod.modules.webservice_manager:WebServiceManager
   # vfs = iotronic_lightningrod.modules.vfs_manager:VfsManager

[options]
build_scripts =
executable= /usr/bin/env python


